# AnyWallpaper-Engine

./: .cursorrules  .gitignore  AUTOMATED_TEST_REPORT_20251108.md  BUGFIX_CN.md  BUGFIX_SUMMARY.txt  BUGFIX_V2_CN.md  CHANGELOG_CN.md  CLICK_TEST_INSTRUCTIONS.md  COMPREHENSIVE_TEST_REPORT.md  DOCS_UPDATE_SUMMARY.md  FINAL_FIX_SUMMARY.txt  FINAL_RELEASE_CHECK_v1.2.0.md  FINAL_REPORT.md  FINAL_TEST_GUIDE.md  NAMING_CONVENTION.md  QUICK_INTEGRATION.md  QUICK_TEST.md  REACT_VUE_INTEGRATION_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  RELEASE_SUMMARY_v1.2.0.md  REMOTE_DESKTOP_DIAGNOSIS.md  SDK_TEST_GUIDE.md  SESSION_LOGIC_ANALYSIS.md  SESSION_STATE_TRACKING.md  SIMPLIFIED_SESSION_LOGIC.md  TESTING_COMPLETE.md  TEST_FULLSCREEN_FIX.md  TEST_INSTRUCTIONS.md  TEST_REACT_INTEGRATION.md  TEST_REMOTE_DESKTOP.md  TEST_REMOTE_DESKTOP_FIX.md  TEST_REPORT.md  TEST_REPORT_CN.md  TEST_RESULT.md  TEST_RESULTS.md  TEST_SUCCESS_REPORT.md  TEST_SUMMARY.md  TEST_SUMMARY.txt  (+8 more)
docs/: API_BRIDGE.md  ARCHITECTURE_DESIGN.md  AUTO_RELEASE_GUIDE.md  BEST_PRACTICES.md  BUILD_INFO.md  BUILD_NOTES.md  CHEAT_SHEET_CN.md  CLEANUP_PLAN.md  CLICK_FIX_COMPLETE.md  DEVELOPER_API_REFERENCE.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_INDEX.md  DRAG_ARCHITECTURE.md  DRAG_FEATURE_SUMMARY.md  ENGINE_POWER_STATE_ISSUE.md  ENGINE_QUICK_REFERENCE.md  ENGINE_WEBMESSAGE_IMPLEMENTATION_GUIDE.md  FINAL_SUMMARY.md  FOR_FLUTTER_DEVELOPERS.md  FULLSCREEN_PAUSE_TEST_GUIDE.md  GITHUB_SETUP.md  IMPROVEMENTS_CN.md  INTEGRATION_ARCHITECTURE.md  MESSAGE_PROTOCOL.md  MIGRATION_SUMMARY.md  MODULE_INTEGRATION_COMPLETE.md  NEXT_STEPS_DELEGATION.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_COMPLETED.md  OPTIMIZATION_GUIDE.md  PACKAGE_USAGE_GUIDE_CN.md  PHASE1_FAILURE_ANALYSIS.md  PHASE1_POWERMANAGER_GUIDE.md  PHASE1_PROGRESS_REPORT.md  PHASE1_STEP_BY_STEP_PLAN.md  PHASE_ABC_COMPLETION_REPORT.md  PRECOMPILED_DLL_INTEGRATION.md  PROJECT_FOLDER_NAMING.md  PROJECT_STRUCTURE.md  QUICK_COMPLETION_PLAN.md  (+31 more)
example/: README.md  commit_msg.txt  pubspec.yaml
examples/: DEBUG_DRAG.md  README_DRAG_TEST.md  test_api.html  test_basic_click.html  test_bidirectional.html  test_drag_auto.html  test_drag_debug.html  test_drag_final.html  test_drag_minimal.html  test_drag_simple.html  test_draggable.html  test_fullscreen_pause.html  test_iframe_ads.html  test_inject_only.html  test_position_tracking.html  test_react.html  test_refactoring.html  test_sdk_browser.html  test_simple.html  test_visibility.html  test_vue.html  test_webmessage_debug.html
lib/: anywp_engine.dart
release/: BUILD_V2_VERIFICATION_REPORT.md  GITHUB_RELEASE_NOTES_v1.1.0.md  GITHUB_RELEASE_NOTES_v1.2.0.md  GITHUB_RELEASE_NOTES_v1.2.1.md  GITHUB_RELEASE_NOTES_v1.3.0.md  GITHUB_RELEASE_NOTES_v1.3.1.md  GITHUB_RELEASE_NOTES_v1.3.2.md  GITHUB_RELEASE_NOTES_v1.3.3.md  GITHUB_RELEASE_NOTES_v2.0.0.md  GITHUB_RELEASE_NOTES_v2.1.1.md  GITHUB_RELEASE_NOTES_v2.1.2.md  GITHUB_RELEASE_NOTES_v2.1.3.md  GITHUB_RELEASE_NOTES_v2.1.5.md  GITHUB_RELEASE_NOTES_v2.1.6.md  GITHUB_RELEASE_NOTES_v2.1.7.md  RELEASE_CHECKLIST.md  RELEASE_PACKAGE_VERIFICATION_v1.2.0.md  commit_msg_v2.1.5.txt  commit_msg_v2.1.6.txt  commit_msg_v2.1.7.txt
release/anywp_engine_v1.1.0/windows/: CMakeLists.txt
release/anywp_engine_v1.2.1/windows/: CMakeLists.txt
release/anywp_engine_v1.2.1/windows/src/: anywp_engine_plugin.cpp  anywp_engine_plugin.h
release/anywp_engine_v1.3.3/windows/test/: CMakeLists.txt
release/anywp_engine_v2.1.2_precompiled/windows/: CMakeLists.txt
release/anywp_engine_v2.1.5_source/windows/test/: CMakeLists.txt
scripts/: PUSH_TO_GITHUB.bat  README.md  README_TEST_SCRIPTS.md  analyze.ps1  analyze_test_results.ps1  auto_release.ps1  auto_test.ps1  auto_test.py  auto_test_sdk_injection.bat  automated_test.ps1  build.bat  build_and_run.bat  build_release.bat  build_release_v2.bat  build_sdk.bat  build_web_sdk.ps1  check_version_consistency.ps1  clear_storage.bat  collect_perf_data.ps1  commit_v2.bat  comprehensive_auto_test.bat  comprehensive_test.bat  debug.bat  debug_run.bat  embed_sdk.py  embed_sdk_split.py  final_fix_push.bat  fix_git_and_push.bat  fix_position.bat  generate_commit_template.ps1  generate_release_notes.ps1  measure_perf_manual.bat  measure_performance.ps1  monitor_click.ps1  (+43 more)
windows/: CMakeLists.precompiled.txt  CMakeLists.txt  anywp_engine_plugin.cpp  anywp_engine_plugin.h  anywp_sdk.README.md  anywp_sdk.js  anywp_sdk.min.js  anywp_sdk.min.js.map  anywp_sdk_old.js  embedded_sdk.h
windows/include/anywallpaper_engine/: README.md
windows/include/anywp_engine/: README.md  any_w_p_engine_plugin_c_api.h  anywp_engine_plugin.h
windows/interfaces/: i_logger.h  i_state_storage.h  i_webview_manager.h
windows/modules/: flutter_bridge.cpp  flutter_bridge.h  iframe_detector.cpp  iframe_detector.h  instance_manager.h  memory_optimizer.cpp  memory_optimizer.h  monitor_manager.cpp  mouse_hook_manager.cpp  mouse_hook_manager.h  power_manager.cpp  power_manager.h  sdk_bridge.cpp  window_manager.cpp
windows/sdk/: MIGRATION_COMPLETE.md  README.md  build.bat  commit_final.txt  index.js  index.ts  package.json  rollup.config.js  types.ts
windows/sdk/__tests__/: bounds.test.ts  core.test.ts  events.test.ts  storage.test.ts  wallpaper.test.ts
windows/sdk/core/: AnyWP.js  AnyWP.ts  init.js  init.ts
windows/sdk/coverage/: index.html  lcov.info
windows/sdk/coverage/core/: AnyWP.ts.html
windows/sdk/coverage/lcov-report/core/: AnyWP.ts.html  index.html  init.ts.html
windows/sdk/coverage/lcov-report/utils/: index.html
windows/sdk/coverage/modules/: wallpaper.ts.html
windows/sdk/coverage/utils/: bounds.ts.html  index.html
windows/sdk/modules/: animations.js  animations.ts  click.js  click.ts  drag.js  events.js  events.ts  spa.js  storage.js  storage.ts  webmessage.ts
windows/sdk/types/: webmessage.ts
windows/sdk/utils/: bounds.js  bounds.ts  coordinates.js  coordinates.ts  debug.js
windows/test/: test_framework.h  unit_tests.cpp
windows/utils/: desktop_wallpaper_helper.h  error_handler.h  logger.cpp  service_locator.h  state_persistence.h  url_validator.h
(+324 files in other folders)
